--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+    <title>Simple Dropshipping Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a paragraph of text on my web page.</p>
+    <header>
+        <h1>My Dropshipping Store</h1>
+    </header>
+    <main>
+        <section class="product-list">
+            <div class="product">
+                <img src="https://via.placeholder.com/150" alt="Product 1">
+                <h2>Product 1</h2>
+                <p>$10.00</p>
+                <button onclick="addToCart('Product 1', 10.00)">Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="https://via.placeholder.com/150" alt="Product 2">
+                <h2>Product 2</h2>
+                <p>$20.00</p>
+                <button onclick="addToCart('Product 2', 20.00)">Add to Cart</button>
+            </div>
+            <!-- Add more products as needed -->
+        </section>
+        <section class="cart">
+            <h2>Shopping Cart</h2>
+            <div id="cart-items"></div>
+            <button id="checkout-button" onclick="checkout()">Checkout</button>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Dropshipping Store</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
